// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should create a default medium secondry button 1`] = `
<button
  class="storybook-button storybook-button--medium storybook-button--secondary"
  type="button"
>
  Button
</button>
`;

exports[`Button should create a large secondry button 1`] = `
<button
  class="storybook-button storybook-button--large storybook-button--secondary"
  type="button"
>
  Button
</button>
`;

exports[`Button should create a primary button 1`] = `
<button
  class="storybook-button storybook-button--medium storybook-button--primary"
  type="button"
>
  Button
</button>
`;

exports[`Button should create a small secondry button 1`] = `
<button
  class="storybook-button storybook-button--small storybook-button--secondary"
  type="button"
>
  Button
</button>
`;

exports[`Button should create a yellow labeless button 1`] = `
<button
  class="storybook-button storybook-button--medium storybook-button--secondary"
  style="background-color: yellow;"
  type="button"
/>
`;
